Bug 59945 - Launching weston fails with error "radeon 0000:01:00.0: forbidden register 0x00008040 at 558"
Summary: Launching weston fails with error "radeon 0000:01:00.0: forbidden register 0x...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-27 21:36 UTC by Martin Andersson
Modified: 2013-01-28 17:24 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch (793 bytes, text/plain)
2013-01-27 21:36 UTC, Martin Andersson
Details
dmesg (96.40 KB, text/plain)
2013-01-27 21:37 UTC, Martin Andersson
Details
weston (20.65 KB, text/plain)
2013-01-27 21:37 UTC, Martin Andersson
Details
possible fix (1.57 KB, patch)
2013-01-28 03:15 UTC, Alex Deucher
Details | Splinter Review

Description Martin Andersson 2013-01-27 21:36:38 UTC
Created attachment 73742 [details]
patch

When i looked up register 0x00008040 i saw that it was defined as WAIT_UNTIL. 

The function that prints that error is 'evergreen_cs_check_reg' in evergreen_cs.c. Since the WAIT_UNTIL is not present in reg_srcs/cayman (i have a radeon 6950) the cayman_reg_safe_bm test fail and since WAIT_UNTIL is not present in any of the switch cases it hits the default case.
 
But WAIT_UNTIL was present in reg_srcs/evergreen, so i copied the WAIT_UNTIL line from evergreen to cayman. I also copied the rest of the WAIT_UNTIL_POLL* because they seemed related.

This fixed the issue for me but i do not know if this is the proper fix.

Tested on kernel 3.8.0-rc5 and wayland/weston master and mesa master.
Comment 1 Martin Andersson 2013-01-27 21:37:06 UTC
Created attachment 73743 [details]
dmesg
Comment 2 Martin Andersson 2013-01-27 21:37:30 UTC
Created attachment 73744 [details]
weston
Comment 3 Alex Deucher 2013-01-28 02:57:37 UTC
This is actually a mesa bug caused by:
http://cgit.freedesktop.org/mesa/mesa/commit/?id=24b1206ab2dcd506aaac3ef656aebc8bc20cd27a
Comment 4 Alex Deucher 2013-01-28 03:15:38 UTC
Created attachment 73753 [details] [review]
possible fix

The attached mesa patch should fix the issue.
Comment 5 Martin Andersson 2013-01-28 08:18:29 UTC
Your patch fixes the issue, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.